--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,47 +1,49 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&family=Open+Sans:wght@500&family=Oswald:wght@200;600&family=Poppins:wght@600&display=swap");
-
 body {
-  margin: 0;
-  padding: 0;
-  background: #fdf4e6;
-  text-align: center;
+    background-color: #1E1E1E;
+    /* color: #EF5814; */
+    margin: 0;
+    padding: 0;
 }
 
-h1 {
-  font-family: "Oswald", sans-serif;
-  font-weight: 800;
-  font-size: 3.2rem;
-  margin-bottom: 0.24rem;
+.my-nav{
+    height: 200px;
+    position: relative;
 }
-
-li {
-  margin-top: 15px;
-}
-li::before {
-  margin-right: 10px;
-}
-
-hr {
-  border-top: 10px dotted red;
-  width: 10%;
-  margin: 20px auto;
-}
-
-ul {
-  list-style: none;
-}
-
-h3 {
-  color: #9a0606;
-}
-
-p,
-li {
-  font-family: "Open Sans", sans-serif;
-
-  font-weight: 900;
+.my-nav-links {
+    display: flex;
+    justify-content: space-evenly;
 }
 
 a {
-  color: #8d3737;
+    text-decoration: none;
+    color: #EF5814;
+}
+
+.section-card{
+    background-color: #ffffff;
+    color: black;
+    border: 3.5px solid #EF5814;
+    width: 520px;
+    height: 123px;
+    position: absolute;
+    bottom: 434px;
+    left: 500px;
+}
+
+.feed{
+    background-color: #75F4FC;
+    height: 1000px;
+    color: #000000;
+}
+
+.footer{
+    color: #ffffff;
+}
+.footer-top{
+    display: flex;
+    justify-content: space-between;
+}
+.social-media{
+    display: flex;
+    align-items: center;
 }
