--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -116,13 +116,42 @@ a {
     }
 }
 
+span {
+    box-shadow: 0 3px 0 0 #7305a6, 0 4px 4px -1px rgba(0, 0, 0, 0.6), 0 4px 6px 1px rgba(0, 0, 0, 0.3), 0 1px 2px 1px rgba(0, 0, 0, 0) inset, 0 18px 32px -2px rgba(255, 255, 255, 0.1) inset;
+    padding: 0.5em 1em;
+    border-radius: 0.2em;
+    color: white;
+    flex-basis: 10%;
+}
+
+.skills {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 0.5em;
+}
+
+.span-primary {
+    background-image: linear-gradient(-45deg, #082dff, #9e93dd);
+}
+
+.span-secondary {
+    background-image: linear-gradient(-45deg, #da13d7, #d885d8);
+}
+
+.span-danger {
+    background-image: linear-gradient(-45deg, #ff0000, #f27fab);
+}
+
+.span-success {
+    background-image: linear-gradient(-45deg, #52C11F, #0caa49);
+}
+
 /* WEBSITE BODY END */
 
 .project-info {
     padding: 15px;
     width: 68%;
 }
-
 
 /* FOOTER SECTION */
 .footer {
