--- a/src/styles/feed.css
+++ b/src/styles/feed.css
@@ -37,13 +37,30 @@
     gap: 2.5rem;
 }
 
-.project-image {
-    flex-basis: 30%;
+.project-header {
+    text-align: center;
+    margin: auto;
+}
+.project-description {
+margin-top: 5rem;
+margin-bottom: 5rem;
+}
+.project-links{
+    display: flex;
+    flex-direction: column;
+}
+
+img {
     border-radius: 32px;
     box-shadow:
         1px 1px 0 1px rgb(239, 88, 20),
         -1px 0 28px 0 rgba(34, 33, 81, 0.01),
         28px 28px 28px 0 rgba(34, 33, 81, 0.25);
+}
+
+.project-image {
+    cursor: pointer;
+    flex-basis: 30%;
     transition:
         .4s ease-in-out transform,
         .4s ease-in-out box-shadow;
@@ -93,5 +110,6 @@ span {
     padding: 15px;
     width: 68%;
 }
+
 
 /* WEBSITE BODY END */
