--- a/src/styles/timeline.css
+++ b/src/styles/timeline.css
@@ -10,7 +10,7 @@
     content: '';
     position: absolute;
     width: 6px;
-    background-color: white;
+    background-color: #ffffff;
     top: 0;
     bottom: 0;
     left: 50%;
@@ -36,7 +36,6 @@ li {
 .container {
     padding: 10px 40px;
     position: relative;
-    background-color: inherit;
     width: 50%;
 }
 
@@ -48,7 +47,7 @@ li {
     height: 25px;
     right: -17px;
     background-color: white;
-    border: 4px solid #FF9F55;
+    border: 4px solid #EF5814;
     top: 15px;
     border-radius: 50%;
     z-index: 1;
