--- a/src/styles/feed.css
+++ b/src/styles/feed.css
@@ -75,7 +75,7 @@ img {
     }
 }
 
-span {
+.skills span {
     box-shadow: 0 3px 0 0 #7305a6, 0 4px 4px -1px rgba(0, 0, 0, 0.6), 0 4px 6px 1px rgba(0, 0, 0, 0.3), 0 1px 2px 1px rgba(0, 0, 0, 0) inset, 0 18px 32px -2px rgba(255, 255, 255, 0.1) inset;
     padding: 0.5em 1em;
     border-radius: 0.2em;
