--- a/src/styles/feed.css
+++ b/src/styles/feed.css
@@ -198,6 +198,10 @@
         width: 100%;
     }
 
+    .section-card {
+        width: 100%;
+    }
+
     .project-header img {
         width: 100%;
         height: 100%;
